--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,27 +1,31 @@
 .titulo {
 	float: left;
 	text-align: center;
-	margin: 70px;
-	margin-right: 300px;
-	padding-left: 80px;
-	margin-bottom: 20px;
+	
+	padding-bottom:0;
+	padding-left: 30%;
+	margin-top: 10%;
 }
 
 #band {
-	float: left;
+    float: left;
+	position:absolute;
+	margin:0;
+	padding: 0;
 }
 
 #verimag {
 	float left;
-	margin-left: 300px;
-	width: 150px;
+	margin-left: 30%;
+	width: 30%;
+	
 }
 
 
 #cifasis {
 	float left;
-	margin-left: 200px;
-	width: 130px;
+	margin-left: 10%;
+	width: 25%;
 }
 
 .hero-unit {
@@ -41,3 +45,5 @@
 .pre {
 	width: 100%;
 }
+
+
